Correcting the navbar spacing on mobile

--- a/webroot/css/admin.css
+++ b/webroot/css/admin.css
@@ -986,6 +986,12 @@ li.comment .text {
 
 @media (max-width:480px) {
 
+	.navbar .status {
+		padding-left: 0px;
+		padding-right: 0px;
+		float: none;
+	}
+
 	.dash {
 		padding: 0;
 	}
